--- a/Day10/Day10.csproj
+++ b/Day10/Day10.csproj
@@ -14,6 +14,9 @@
       <None Update="Input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="InputTest.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
